<resources>
    <string name="app_name">Calculator</string>
    <!--起動時画面-->
    <string name="calculator_button_label">電卓</string>
    <!--電卓画面-->
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="equal">=</string>
    <string name="delete">del</string>
    <string name="dot">.</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="error">ERROR</string>
</resources>
