<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSteelBlue"
    app:layout_constraintHorizontal_chainStyle="spread">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calculate_area"
        android:layout_width="@dimen/calculation_result_area_width"
        android:layout_height="@dimen/calculation_result_area_height"
        android:gravity="right"
        android:text="test"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@id/output_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/output_area"
        android:layout_width="@dimen/calculation_result_area_width"
        android:layout_height="@dimen/calculation_result_area_height"
        android:gravity="right"
        android:text="test"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@id/spacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_area" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/number_8_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output_area" />

    <Button
        android:id="@+id/number_7_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_7"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_4_button"
        app:layout_constraintEnd_toStartOf="@id/number_8_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <Button
        android:id="@+id/number_4_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_7_button"
        android:background="@color/lightGray"
        android:text="@string/number_4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_1_button"
        app:layout_constraintEnd_toStartOf="@id/number_5_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_7_button" />

    <Button
        android:id="@+id/number_1_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_4_button"
        android:background="@color/lightGray"
        android:text="@string/number_1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_0_button"
        app:layout_constraintEnd_toStartOf="@id/number_2_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_4_button" />

    <Button
        android:id="@+id/number_0_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_0"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dot_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_1_button" />

    <Button
        android:id="@+id/number_8_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_8"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_5_button"
        app:layout_constraintEnd_toStartOf="@id/number_9_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_7_button"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <Button
        android:id="@+id/number_5_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_2_button"
        app:layout_constraintEnd_toStartOf="@id/number_6_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_4_button"
        app:layout_constraintTop_toBottomOf="@id/number_8_button" />

    <Button
        android:id="@+id/number_2_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/dot_button"
        app:layout_constraintEnd_toStartOf="@id/number_3_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_1_button"
        app:layout_constraintTop_toBottomOf="@id/number_5_button" />

    <Button
        android:id="@+id/dot_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/dot"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/equal_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_0_button"
        app:layout_constraintTop_toBottomOf="@id/number_2_button" />

    <Button
        android:id="@+id/number_9_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_9"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_6_button"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_8_button"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <Button
        android:id="@+id/number_6_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_6"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/number_3_button"
        app:layout_constraintEnd_toStartOf="@id/division_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_5_button"
        app:layout_constraintTop_toBottomOf="@id/number_9_button" />

    <Button
        android:id="@+id/number_3_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/number_3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/equal_button"
        app:layout_constraintEnd_toStartOf="@id/subtraction_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_2_button"
        app:layout_constraintTop_toBottomOf="@id/number_6_button" />

    <Button
        android:id="@+id/equal_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/equal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/subtraction_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/dot_button"
        app:layout_constraintTop_toBottomOf="@id/number_1_button" />

    <Button
        android:id="@+id/delete_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/delete"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/division_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_9_button"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <Button
        android:id="@+id/division_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/division"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/multiplication_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_6_button"
        app:layout_constraintTop_toBottomOf="@id/delete_button" />

    <Button
        android:id="@+id/multiplication_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/multiplication"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/subtraction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_6_button"
        app:layout_constraintTop_toBottomOf="@id/division_button" />

    <Button
        android:id="@+id/subtraction_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/subtraction"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/addition_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/number_3_button"
        app:layout_constraintTop_toBottomOf="@id/multiplication_button" />

    <Button
        android:id="@+id/addition_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="@string/addition"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/equal_button"
        app:layout_constraintTop_toBottomOf="@id/subtraction_button" />
</androidx.constraintlayout.widget.ConstraintLayout>